Mon Oct 20 05:09:04 GMT 2014  Olly Betts <olly@survex.com>

	* docs/overview.rst: Note that pdftotext is part of poppler as well as
	  xpdf.  (Noted by Paul Wise)

Mon Oct 20 00:55:51 GMT 2014  Olly Betts <olly@survex.com>

	* .gitignore: Update to ignore new generated files.

Thu Jul 24 21:27:26 GMT 2014  Olly Betts <olly@survex.com>

	* NEWS: Update.

Sun Jun 22 13:32:10 GMT 2014  Olly Betts <olly@survex.com>

	* NEWS: Update.

Fri Jun 20 14:37:04 GMT 2014  Olly Betts <olly@survex.com>

	* Makefile.am: Don't compile in unixperm.cc - it isn't currently used,
	  and it fails to build with mingw.  (fixes #635)

Mon Jun 09 01:23:48 GMT 2014  Olly Betts <olly@survex.com>

	* myhtmlparse.cc: LibreOffice can export a timestamp of "0;0" - treat
	  this as invalid rather than as "year 0".

Fri Jun 06 05:50:21 GMT 2014  Olly Betts <olly@survex.com>

	* myhtmlparse.cc: Add handling for longer form of timestamps in LO
	  HTML export.

Tue Jun 03 02:29:51 GMT 2014  Olly Betts <olly@survex.com>

	* diritor.cc: Fix "applications/msword" to "application/msword" in the
	  fallback code for CDF files.

Tue Jun 03 01:49:10 GMT 2014  Olly Betts <olly@survex.com>

	* diritor.cc: In fallback for CDF files, compare the extension
	  *without* leading dot.

Fri May 30 05:38:01 GMT 2014  Olly Betts <olly@survex.com>

	* omindex.cc,urlencode.cc,urlencode.h: URL encode starting URL
	  properly.

Thu May 29 03:38:26 GMT 2014  Olly Betts <olly@survex.com>

	* docs/omegascript.rst: Put ``...`` around Xapian C++ class names.

Thu May 29 03:36:55 GMT 2014  Olly Betts <olly@survex.com>

	* docs/omegascript.rst,query.cc: Add optional LENGTH parameter to
	  $snippet.

Thu May 29 02:41:08 GMT 2014  Olly Betts <olly@survex.com>

	* diritor.cc: libmagic can return a second string starting "Composite
	  Document File V2 Document" for the mime-type, so just look for that
	  prefix.  And newer libmagic returns "application/CDFV2-corrupt" in
	  these cases, so handle that too.
