@@ -399,9 +399,9 @@ $set{OPT,VALUE}
           ``bb2`` (in Omega >= 1.3.2), ``bm25``, ``bool``,
           ``dlh`` (in Omega >= 1.3.2), ``dph`` (in Omega >= 1.3.2),
           ``ifb2`` (in Omega >= 1.3.2), ``ineb2`` (in Omega >= 1.3.2),
-          ``inl2`` (in Omega >= 1.3.2), ``pl2`` (in Omega >= 1.3.2),
-          ``tfidf`` (in Omega >= 1.3.1), and ``trad``.  e.g.
-          ``$set{weighting,bm25 1 0.8}``
+          ``inl2`` (in Omega >= 1.3.2), ``lm`` (in Omega >= 1.3.2),
+          ``pl2`` (in Omega >= 1.3.2), ``tfidf`` (in Omega >= 1.3.1),
+          and ``trad``.  e.g.  ``$set{weighting,bm25 1 0.8}``
 
         * expansion - set the query expansion scheme to use, and (optionally)
           the parameters to use if the expansion scheme supports them. The syntax
