@@ -1,3 +1,7 @@
+Fri Oct 24 23:07:24 GMT 2014  Gaurav Arora <gauravarora.daiict@gmail.com>
+
+	* docs/omegascript.rst,weight.cc: Add support for $set{weighting,lm}.
+
 Mon Oct 20 05:09:04 GMT 2014  Olly Betts <olly@survex.com>
 
 	* docs/overview.rst: Note that pdftotext is part of poppler as well as
